--- a/views/pages/clientes.jade
+++ b/views/pages/clientes.jade
@@ -70,16 +70,16 @@
 
 <button class="w3-btn w3-blue-grey" onclick="criarCliente()">Cadastrar</button>
 </form>
+       
 </br></br>
-<button class="w3-btn w3-blue-grey" onclick="deletar()"> Delete</button>
-<button class="w3-btn w3-blue-grey" onclick="modify()"> Modify</button>
+<button class="w3-btn w3-blue-grey" onclick="deletarCliente()"> Delete</button>
+<button class="w3-btn w3-blue-grey" onclick="percorreChecks()"> Editar</button>
 <table class="w3-table-all w3-card-4">
 <thead>
 <tr>
-<th></th>
+<th>id</th>
 <th>Nome</th>
 <th>Telefone</th>
-
 
 </thead>
 <tbody id="tabelaCliente" ></tbody>
